<resources>
    <!-- headers -->
    <string name="app_name">ChatBot</string>
    <string name="settings_name">Settings</string>
    <string name="chat_name">Current chat</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>

    <!-- other -->
    <string name="en_locale">English</string>
    <string name="ru_locale">Русский</string>
    <string name="select_locale_label">Select language:</string>
    <string name="main_label">Touch button at bottom right corner of screen to start/open chat</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="input_message_hint">Input message</string>
    <string name="login_label">Login:</string>
    <string name="password_label">Password:</string>
    <string name="input_login_hint">Your username</string>
    <string name="input_password_hint">Your password</string>
    <string name="login_button_label">Sign in</string>
    <string name="invalid_creds_error_msg">Invalid username/password</string>
</resources>
